--- a/ChatServer/ChatServer.csproj
+++ b/ChatServer/ChatServer.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ChatApplicationLibrary\ChatApplicationLibrary.csproj" />
+    <ProjectReference Include="..\ChatProtocol\ChatProtocol.csproj" />
   </ItemGroup>
 
 </Project>
