--- a/ChatClient/ChatClient.csproj
+++ b/ChatClient/ChatClient.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp3.0;netcoreapp2.0;net471</TargetFrameworks>
+    <TargetFrameworks>netcoreapp5.0;netcoreapp3.0;netcoreapp2.0;net471</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
